fix styles for dark mode

--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -18,7 +18,6 @@ body {
 
 h1 a {
   font-weight: 700;
-  color: black !important;
   padding: none !important;
 }
 
@@ -59,16 +58,4 @@ h1 a {
 
 .video-shortcode {
   margin: $padding-8 0;
-}
-
-// Capstone
-
-.references .csl-entry {
-  padding: 0 !important;
-  margin: 0 !important;
-  font-size: 0.8rem !important;
-}
-
-.references .csl-entry br {
-  display: none;
 }
